<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Trigger</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="cancel">Cancel</string>
    <string name="not_set">Not set</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="clear">Clear</string>
    <string name="none">None</string>
    <string name="options">Options</string>
    <string name="preview">Preview</string>
    <string name="undo">Undo</string>
    <string name="update">Update</string>
    <string name="close">Close</string>
    <string name="play">Play</string>
    <string name="save">Save</string>
    <string name="ellipsis">…</string>
    <string name="navigate_back">Back</string>
    <string name="version_alpha">Alpha</string>
    <string name="version_beta">Beta</string>
    <string name="version_nightly">Trigger</string>
    <string name="console_ds">DS</string>
    <string name="console_dsi">DSi (Experimental)</string>
    <string name="console_ds_full">Nintendo DS</string>
    <string name="console_dsi_full">Nintendo DSi</string>
    <string name="size_bytes">B</string>
    <string name="size_kb">KB</string>
    <string name="size_mb">MB</string>
    <string name="size_gb">GB</string>
    <string name="error_rom_not_found">Could not find ROM</string>
    <string name="error_rom_not_found_info">The ROM you have selected has not been found. Make sure the selected ROM can be found in the current ROM search directory.\n%1$s</string>
    <string name="error_load_rom">Could not load ROM</string>
    <string name="error_load_rom_message">There was a problem loading the ROM. Make sure it\'s not corrupted and try again.</string>
    <string name="error_load_firmware">Could not load the firmware</string>
    <string name="error_load_firmware_message">There was a problem loading the firmware (%1$s). Make sure the BIOS and firmware dump is not corrupted, that the firmware is bootable and try again.</string>
    <string name="error_load_rom_report_issue">An error log was generated that can help fix this problem. Do you want to open an issue on GitHub with this log? You will need a GitHub account.</string>
    <string name="title_emulator_running">Emulator running</string>
    <string name="message_stop_emulation">Stop emulation and load new ROM?</string>
    <string name="error_load_gba_rom">Could not load GBA ROM</string>
    <string name="action_search_roms">Search ROMs</string>
    <string name="action_sort_roms">Sort ROMs</string>
    <string name="action_boot_firmware">Boot firmware</string>
    <string name="action_refresh_rom_list">Refresh ROM list</string>
    <string name="hint_search_roms">Search ROMs…</string>
    <string name="update_available">Update available: %1$s</string>
    <string name="no_update_available">No update available</string>
    <string name="update_check_failed">Failed to check for updates</string>
    <string name="update_download_complete">Update downloaded successfully</string>
    <string name="nightly_update_available">Nightly update available</string>
    <string name="nightly_update_available_message">Do you want to download it now?</string>
    <string name="skip_update">Skip</string>
    <string name="remind_later_update">Later</string>
    <string name="downloading_update">Downloading update…</string>
    <string name="starting_download">Starting download…</string>
    <string name="download_progress_sizes">%1$.1fMB/%2$.1fMB</string>
    <string name="update_download_failed">Failed to download update</string>
    <string name="dsiware_manager">DSiWare Manager</string>
    <string name="no_dsiware_titles_installed">You don\'t have any DSiWare title installed</string>
    <string name="dsiware_manager_no_dsi_setup">You haven\'t setup the DSi system</string>
    <string name="dsiware_manager_invalid_dsi_setup">Your DSi system setup is invalid</string>
    <string name="import_dsiware_title">Import DSiWare title</string>
    <string name="dsiware_manager_setup">Setup</string>
    <string name="dsiware_manager_fix_setup">Fix setup</string>
    <string name="dsiware_manager_load_error">There was a problem listing your DSiWare titles. Please check your DSi setup</string>
    <string name="dsiware_manager_import_title_error_open_nand_failed">The NAND could not be opened</string>
    <string name="dsiware_manager_import_title_error_open_file_failed">Error opening selected file</string>
    <string name="dsiware_manager_import_title_error_not_dsiware_title">Not a DSiWare title</string>
    <string name="dsiware_manager_import_title_error_title_already_imported">DSiWare title already imported</string>
    <string name="dsiware_manager_import_title_error_insatll_failed">Failed to install title</string>
    <string name="dsiware_manager_import_title_error_metadat_fetch_failed">Failed to download title metadata. Check your internet connection</string>
    <string name="dsiware_manager_import_title_error_unknown">An unknown error occurred</string>
    <string name="dsiware_manager_import_data">Import data…</string>
    <string name="dsiware_manager_export_data">Export data…</string>
    <string name="dsiware_manager_import_file_success">%1$s imported successfully</string>
    <string name="dsiware_manager_import_file_error">Failed to import file</string>
    <string name="dsiware_manager_export_file_success">%1$s exported successfully</string>
    <string name="dsiware_manager_export_file_error">Failed to export file</string>
    <string name="dsiware_import_from_file">From file</string>
    <string name="dsiware_import_from_rom_list">From ROM list</string>
    <string name="select_dsiware_title">Select DSiWare title</string>
    <string name="no_dsiware_roms_found">No DSiWare ROMs found</string>
    <string name="info_fps">FPS: %1$d</string>
    <string name="info_play_time_hours_minutes">Play time: %1$dh %2$dm</string>
    <string name="info_play_time_minutes">Play time: %1$dm</string>
    <string name="info_loading">LOADING…</string>
    <string name="save_state_slot">%1$s.</string>
    <string name="failed_save_state">Failed to save state</string>
    <string name="failed_load_state">Failed to load state</string>
    <string name="cant_load_empty_slot">Can\'t load an empty save state slot</string>
    <string name="failed_reset_emulation">Failed to reset emulation</string>
    <string name="save_states_not_supported">Save states are not supported while running the firmware</string>
    <string name="save_states_unavailable_ra_hardcore_enabled">Save states are unavailable while Hardcore mode is enabled</string>
    <string name="rewind_time_seconds">%1$ss</string>
    <string name="rewind_time_minutes_seconds">%1$dm%2$ss</string>
    <string name="rewind_not_enabled">Rewind is not enabled</string>
    <string name="rewind_unavailable_ra_hardcore_enabled">Rewind is unavailable while Hardcore mode is enabled</string>
    <string name="no_image_selected">No image selected</string>
    <string name="failed_to_load_image">Failed to load image</string>
    <string name="emulator_stop_gba_mode_unsupported">GBA mode is not supported</string>
    <string name="emulator_stop_internal_error">An error was encountered during the ROM\'s execution</string>
    <string name="action_sort_alphabetically">Alphabetically</string>
    <string name="action_sort_recently_played">Recently played</string>
    <string name="ds_bios_dir_not_set">DS BIOS directory not set</string>
    <string name="ds_bios_dir_not_set_info">DS BIOS directory is not set. Select the directory that contains the following files:\n&#8226; bios7.bin\n&#8226; bios9.bin\n&#8226; firmware.bin</string>
    <string name="dsi_bios_dir_not_set">DSi BIOS directory not set</string>
    <string name="dsi_bios_dir_not_set_info">DSi BIOS directory is not set. Select the directory that contains the following files:\n&#8226; bios7.bin\n&#8226; bios9.bin\n&#8226; firmware.bin\n&#8226; nand.bin</string>
    <string name="incorrect_bios_dir">Incorrect BIOS directory</string>
    <string name="ds_incorrect_bios_dir_info">The BIOS directory for the DS system is not correct. Make sure that the selected directory contains the following files:\n&#8226; bios7.bin\n&#8226; bios9.bin\n&#8226; firmware.bin</string>
    <string name="dsi_incorrect_bios_dir_info">The BIOS directory for the DSi system is not correct. Make sure that the selected directory that contains the following files:\n&#8226; bios7.bin\n&#8226; bios9.bin\n&#8226; firmware.bin\n&#8226; nand.bin</string>
    <string name="storage_permission_required">Storage permission required</string>
    <string name="storage_permission_required_info">Storage permission is required to load ROMs from your device. Please grant access to storage on the next dialog.</string>
    <string name="microphone_permission_required">Audio recording permission required</string>
    <string name="microphone_permission_required_info">Audio recording permission is required to send microphone data to the emulator. Please grant microphone access permission on the next dialog.</string>
    <string name="wifi_settings">WiFi Settings</string>
    <string name="wifi_enable">Enable WiFi</string>
    <string name="wifi_enable_summary">Enable WiFi for online multiplayer and Nintendo Wi-Fi Connection features</string>
    <string name="network_mode">Network Mode</string>
    <string name="network_mode_summary">Choose how network traffic is routed</string>
    <string name="network_adapter">Network Adapter</string>
    <string name="network_adapter_summary">Select network adapter for direct mode</string>
    <string name="multiplayer_settings">Multiplayer Settings</string>
    <string name="multiplayer_interface">Multiplayer Interface</string>
    <string name="multiplayer_interface_summary">Select multiplayer interface type</string>
    <string name="multiplayer_info">Multiplayer Information</string>
    <string name="multiplayer_info_summary">Local multiplayer works automatically. LAN multiplayer is working but needs host/join UI. Netplay is not implemented yet.</string>
    <string name="lan_host_game">Host LAN Game</string>
    <string name="lan_host_game_summary">Create a LAN game for others to join</string>
    <string name="lan_join_game">Join LAN Game</string>
    <string name="lan_join_game_summary">Find and join available LAN games</string>
    <string name="player_name">Player Name</string>
    <string name="enter_player_name">Enter your player name</string>
    <string name="number_of_players">Number of Players</string>
    <string name="host_game">Host Game</string>
    <string name="available_games">Available Games</string>
    <string name="direct_connect">Direct Connect</string>
    <string name="host_address">Host Address</string>
    <string name="connect">Connect</string>
    <string name="join_game">Join Game</string>
    <string name="your_ip_address">Your IP Address (for direct join):</string>
    <string name="lan_room_status">LAN Room Status</string>
    <string name="players_in_room">Players in Room:</string>
    <string name="leave_room">Leave Room</string>
    <string name="lan_player_name">Player Name</string>
    <string name="lan_player_name_summary">Your name displayed to other players in LAN games</string>
    <string name="mp_recv_timeout">Receive Timeout</string>
    <string name="mp_recv_timeout_summary">Timeout for multiplayer packet reception in milliseconds (default: 1ms)</string>
    <string name="lan_host_num_players">Default Max Players</string>
    <string name="lan_host_num_players_summary">Default number of players when hosting a LAN game (2-16)</string>
    <string name="lan_port">LAN Port</string>
    <string name="lan_port_summary">Port used for LAN multiplayer connections (default: 7064)</string>
</resources>